--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,20 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "server.js",
         "use": "@vercel/node"
+      },
+      {
+        "src": "ai/recommendation.py",
+        "use": "@vercel/python"
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/index.js"
+        "src": "/api/(.*)",
+        "dest": "/server.js"
       }
+      
     ]
   }
   
